# cargo-sort-derives

./: Cargo.toml  Makefile.toml  README.md  _config.yml  flake.nix  result  sort-derives.toml
.github/workflows/: build.yml  gh-pages.yml
fixtures/expected/default/: a.rs  b.rs  multiline.rs
fixtures/expected/default/x/: xa.rs
fixtures/expected/exclude/: c.rs
fixtures/expected/order/: a.rs  c.rs  multiline.rs
fixtures/expected/order/x/: xa.rs
fixtures/expected/order_head_ellipsis/: a.rs
fixtures/expected/order_head_ellipsis/x/: xa.rs
fixtures/expected/order_middle_ellipsis/: a.rs  c.rs  multiline.rs
fixtures/expected/order_middle_ellipsis/x/: xa.rs
fixtures/expected/order_preserve/: a.rs  c.rs  multiline.rs
fixtures/input/: a.rs  b.rs  c.rs  multiline.rs
fixtures/input/x/: xa.rs
img/: basic.tape  check.tape  order.tape
src/: config.rs  console.rs  ext.rs  grep.rs  main.rs  parse.rs  process.rs  sort.rs  util.rs
tests/: test.rs
tests/config/: exclude.toml
