[package]
name = "cargo-sort-derives"
version = "0.10.1"
edition = "2021"
description = "Cargo subcommand to sort derive attributes"
authors = ["Kyosuke Fujimoto <kyoro.f@gmail.com>"]
homepage = "https://github.com/lusingander/cargo-sort-derives"
repository = "https://github.com/lusingander/cargo-sort-derives"
readme = "README.md"
license = "MIT"
keywords = ["cargo", "subcommand", "plugin", "derive"]
categories = ["development-tools::cargo-plugins", "command-line-utilities"]
rust-version = "1.80.0"

exclude = ["/.github", "/img", "_config.yml", "tests", "fixtures"]

[dependencies]
clap = { version = "4.5.48", features = ["derive"] }
console = "0.16.1"
grep-matcher = "0.1.7"
grep-regex = "0.1.13"
grep-searcher = "0.1.14"
ignore = "0.4.23"
regex = "1.11.3"
serde = { version = "1.0.228", features = ["derive"] }
similar = "2.7.0"
toml = "0.9.7"

[dev-dependencies]
assert_cmd = "2.0.17"
assert_fs = "1.1.3"
dircpy = "0.3.19"
tempfile = "3.23.0"
