[package]
name = "cargo-sort-derives"
version = "0.11.0"
edition = "2024"
description = "Cargo subcommand to sort derive attributes"
authors = ["Kyosuke Fujimoto <kyoro.f@gmail.com>"]
homepage = "https://github.com/lusingander/cargo-sort-derives"
repository = "https://github.com/lusingander/cargo-sort-derives"
readme = "README.md"
license = "MIT"
keywords = ["cargo", "subcommand", "plugin", "derive"]
categories = ["development-tools::cargo-plugins", "command-line-utilities"]
rust-version = "1.85.0"

exclude = ["/.github", "/img", "_config.yml", "tests", "fixtures"]

[dependencies]
clap = { version = "4.5.50", features = ["derive"] }
console = "0.16.1"
grep-matcher = "0.1.8"
grep-regex = "0.1.14"
grep-searcher = "0.1.16"
ignore = "0.4.24"
regex = "1.12.2"
serde = { version = "1.0.228", features = ["derive"] }
similar = "2.7.0"
toml = "0.9.8"

[dev-dependencies]
assert_cmd = "2.0.17"
assert_fs = "1.1.3"
dircpy = "0.3.19"
tempfile = "3.23.0"
