[package]
name = "cargo-sort-derives"
version = "0.13.0"
edition = "2024"
description = "Cargo subcommand to sort derive attributes"
authors = ["Kyosuke Fujimoto <kyoro.f@gmail.com>"]
homepage = "https://github.com/lusingander/cargo-sort-derives"
repository = "https://github.com/lusingander/cargo-sort-derives"
readme = "README.md"
license = "MIT"
keywords = ["cargo", "subcommand", "plugin", "derive"]
categories = ["development-tools::cargo-plugins", "command-line-utilities"]
rust-version = "1.85.0"

exclude = ["/.github", "/img", "_config.yml", "tests", "fixtures"]

[dependencies]
clap = { version = "4.6.1", features = ["derive"] }
console = "0.16.3"
ignore = "0.4.26"
proc-macro2 = { version = "1", features = ["span-locations"] }
syn = { version = "2", features = ["full", "parsing"] }
serde = { version = "1.0.228", features = ["derive"] }
similar = "3.1.1"
toml = "1.1.2"

[dev-dependencies]
assert_cmd = "2.2.2"
assert_fs = "1.1.4"
dircpy = "0.3.20"
tempfile = "3.27.0"
